--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -2,11 +2,10 @@
     position: relative;
     text-decoration: none;
     color: rgb(43, 243, 8);
+}
 
-
-    .nav-link:hover {
-        color: rgb(204, 243, 8);
-    }
+.nav-link:hover {
+    color: rgb(204, 243, 8);
 }
 
 a.nav-link.active {
@@ -22,5 +21,5 @@ a.nav-link.active {
     width: calc(100% - 4px);
     height: 4px;
     border-radius: 2px;
-    background-color: rgb(234, 255, 1);
+    background-color: rgba(225, 245, 8, 0.428);
 }
